# Aegis

./: .env  .env.example  .eslintrc.json  .gitignore  2025-07-01-Claude-ODRL-Deprecation-Plan.md  AEGIS_INTEGRATION_GUIDE.md  AUTONOMOUS_DEV.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  ODRL_TEST_GUIDE.md  PR_SUMMARY.md  README.md  aegis-mcp-config.example.json  aegis-mcp-proxy.mjs  aegis-proxy-with-fs.mjs  aegis-wrapper.sh  claude-code-review-oauth.yml  claude-desktop-aegis-config.json  debug-anonymization.js  debug-router.js  integration-test.js  jest.config.e2e.js  jest.config.js  list-all-tools.js  mcp-config.example.yaml  mcp-launcher.js  package-lock.json  package.json  run-tests.js  self-improve.out  start-aegis-with-dashboard.sh  start-aegis.sh  start-mcp-proxy.sh  start-ui.sh  test-actual-servers.js  test-aegis-filesystem.mjs  test-aegis-proxy.js  (+21 more)
.claude/: README.md  session-start-hook.sh  settings.example.json  settings.local.json
a2a/: .gitignore  README.md  SSE-TESTING-GUIDE.md  package-lock.json  package.json  run-real-aegis-test.sh  start-http-server.sh  test-mcp-flow.sh  test-mcp-sse.py  test-setup.sh  test-sse.sh
deployment/: README.md  docker-compose.yml
docs/: CLAUDE_CODE_INTEGRATION.md  LEARNING_DATA_ENCRYPTION.md  ODRL_ARCHITECTURE_OVERVIEW.md  ODRL_DECISION_FLOW.md  ODRL_IMPLEMENTATION_LOGIC.md  ODRL_INDEX.md  README.md  aegis-vs-claude-iam.md  agent-design.md  agent-identification-design.md  agent-name-integration.md  api-reference.md  (+18 more)
rust/: .gitignore  Cargo.toml  README.md  aegis-mcp-config.example.json
rust/src/: main.rs
(+435 files in other folders)
